@@ -274,7 +274,7 @@ sub _lsf_alignment_command { ## no critic (Subroutines::ProhibitExcessComplexity
                          q(--input),         ( join q{/}, $input_path, $name_root.q{.bam}),
                          q(--output_prefix), ( join q{/}, $archive_path, $name_root),
                          q(--do_markduplicates),
-                         ($self->not_strip_bam_tag ? q(--not_strip_bam_tag) : q() ),
+                         q(--not_strip_bam_tag),
                          ($self->is_paired_read ? q(--is_paired_read) : q(--no-is_paired_read) );
   }
 
