@@ -1,6 +1,7 @@
 LIST OF CHANGES
 ---------------
 
+ - drop not_strip_bam_tag option, explicitly disable bam tag stripping in seq_alignment
  - use lowload lsf queue
  - seqchksum_comparator to cope with higher plexing (with a chdir)
  - force HiSeq rapid run V2 flowcells (BCXX suffix) to use P4
